Next and previous button mobile fix

--- a/styles/scss/homePage/_carousel.module.scss
+++ b/styles/scss/homePage/_carousel.module.scss
@@ -90,7 +90,31 @@
         -ms-transform : translateX(0%);
     }
 }
+@-webkit-keyframes slideNext {
+    from {
+        transform : translateX(1000%);
+        -webkit-transform : translateX(1000%);
+        -ms-transform : translateX(1000%);
+    }
+    to {
+        transform : translateX(0%);
+        -webkit-transform : translateX(0%);
+        -ms-transform : translateX(0%);
+    }
+}
 @keyframes slidePrevious {
+    from {
+        transform : translateX(-1000%);
+        -webkit-transform : translateX(-1000%);
+        -ms-transform : translateX(-1000%);
+    }
+    to {
+        transform : translateX(0%);
+        -webkit-transform : translateX(0%);
+        -ms-transform : translateX(0%);
+    }
+}
+@-webkit-keyframes slidePrevious {
     from {
         transform : translateX(-1000%);
         -webkit-transform : translateX(-1000%);
